--- a/values.qmd
+++ b/values.qmd
@@ -1,3 +1,3 @@
-# Culture
+# Values
 
-What's our group culture, and what do we want it to be?
+What are our values, and what do we want our culture to be?
