create data life cycle page; add placeholder for communication norms in expectations doc; update yml

--- a/expectations.qmd
+++ b/expectations.qmd
@@ -28,6 +28,8 @@ All SWAMP staff are expected to abide by the following:
 
 -   *Communication response time*: Please aim to reply to all emails or phone calls within 3 business days.
 
+-   ***ADD*** **Norms regarding when to use email vs. Teams chat vs. Phone call vs video call vs zoom**
+
 ## Expectations of supervisors
 
 SWAMP Supervisors commit to uphold the following:
