--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,6 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 
 Content in this manual includes curated information that members of the SWAMP Team have found helpful to support onboarding/offboarding, collaboration, communication, and our collective culture. It is a place to document institutional knowledge and provide references to available resources.
 
-This [Quarto book](https://quarto.org/docs/books) is an open, living, and continuously iterating resource. If you have suggestions for additions or revisions you think should be incorporated into this book, please follow the guidance provided in the [How to contribute](https://cawaterboarddatacenter.github.io/swamp-manual/contribute.html) chapter.
+This [Quarto book](https://quarto.org/docs/books) is an open, living, and continuously iterating resource. If you have suggestions for additions or revisions you think should be incorporated into this book, please follow the guidance provided in the [Contributing](https://cawaterboarddatacenter.github.io/swamp-manual/contribute.html) chapter.
 
 ![SWAMP logo](images/swamp-logo.jpg){width="200"} ![SWAMP iq logo](images/swamp-iq-logo.jpg){width="312"}
